IPG-36 [Register] Tạo BE cho register
